--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/blank_set"
+        android:id="@+id/text_output"
         android:gravity="center_horizontal"
         android:layout_weight="0.80"
         android:textColor="#ffffffff" />
