Added color to speech button, making it easier for the user to see when button is depressed.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:id="@+id/welcome_label"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_weight="0.15"
+        android:layout_weight="0.10"
         android:textColor="#ffffffff"
         android:textSize="25sp" />
 
@@ -23,44 +23,46 @@
         android:layout_height="wrap_content"
         android:id="@+id/text_output"
         android:gravity="center_horizontal"
-        android:layout_weight="0.70"
+        android:layout_weight="0.55"
         android:textColor="#ffffffff"
         android:textSize="20sp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.05">
+        android:layout_height="0dp"
+        android:layout_weight="0.10">
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:id="@+id/user_input"
             android:maxLines="1"
             android:contentDescription="@string/user_text_input"
-            android:layout_weight="0.95"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:editable="true"
+            android:layout_weight=".85" />
 
         <ImageButton
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:id="@+id/userInputConfirmButton"
-            android:layout_weight=".05"
             android:contentDescription="@string/confirm_user_input"
             android:src="@mipmap/checkmark"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:layout_weight="0.15" />
     </LinearLayout>
 
     <ImageButton
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/speech_button"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.05"
+        android:layout_weight="0.15"
         android:text="@string/begin_button_text"
         android:textColor="#ffffffff"
         android:src="@mipmap/microphone"
-        android:contentDescription="@string/speech_button_description" />
+        android:contentDescription="@string/speech_button_description"
+        android:background="@color/LightGray" />
 
 </LinearLayout>
