Added scrolling to textview, in addition to adding visual feedback to the speech button

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
 <resources>
     <color name="DarkGray">#ff444444</color>
     <color name="LightGray">#ffbbbbbb</color>
+    <color name="Filter">#aa000000</color>
 </resources>
