--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ff181816">
+    android:background="#000000"
+    android:clickable="true">
 
     <TextView android:text="@string/scene" android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:id="@+id/welcome_label"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_weight="0.10"
         android:textColor="#ffffffff"
         android:textSize="25sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_output"
-        android:gravity="center_horizontal"
+    <ScrollView
+        android:id="@+id/SCROLLER_ID"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        android:fillViewport="true"
         android:layout_weight="0.55"
-        android:textColor="#ffffffff"
-        android:textSize="20sp" />
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_output"
+            android:gravity="start"
+            android:textColor="#ffffffff"
+            android:textSize="20sp"
+
+            />
+
+    </ScrollView>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.10">
+        android:layout_height="50dp">
 
         <EditText
             android:layout_width="0dp"
@@ -50,19 +62,20 @@
             android:contentDescription="@string/confirm_user_input"
             android:src="@mipmap/checkmark"
             android:scaleType="fitCenter"
-            android:layout_weight="0.15" />
+            android:layout_weight="0.15"
+            android:color="@color/LightGray" />
+
     </LinearLayout>
 
     <ImageButton
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="75dp"
         android:id="@+id/speech_button"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.15"
         android:text="@string/begin_button_text"
         android:textColor="#ffffffff"
         android:src="@mipmap/microphone"
         android:contentDescription="@string/speech_button_description"
-        android:background="@color/LightGray" />
+        android:color="@color/LightGray"/>
 
 </LinearLayout>
