--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
     android:background="#000000"
     android:clickable="true">
 
-    <TextView android:text="@string/scene" android:layout_width="fill_parent"
+    <TextView android:text="@string/intro" android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/welcome_label"
+        android:id="@+id/user_input_label"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="#ffffffff"
         android:textSize="25sp" />
