--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,26 +34,28 @@
             android:id="@+id/text_output"
             android:gravity="start"
             android:textColor="#ffffffff"
-            android:textSize="20sp"
-
-            />
+            android:textSize="20sp"/>
 
     </ScrollView>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <EditText
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="40dp"
             android:id="@+id/user_input"
             android:maxLines="1"
             android:contentDescription="@string/user_text_input"
-            android:textColor="#ffffff"
-            android:editable="true"
-            android:layout_weight=".85" />
+            android:hint="@string/edit_text_hint"
+            android:background="#ffffff"
+            android:textColor="#000000"
+            android:layout_weight=".85"
+            android:layout_gravity="center_vertical" />
 
         <ImageButton
             android:layout_width="0dp"
