--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,4 +4,7 @@
     <color name="DarkGray">#ff444444</color>
     <color name="LightGray">#ffbbbbbb</color>
     <color name="Filter">#aa000000</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
